--- a/food/index.html
+++ b/food/index.html
@@ -1290,6 +1290,30 @@
 </div>
 <div style="width: 33vw; height: 33vh; ">
 <div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251227_103428214.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251227_103428214.jpg">IMG_20251227_103428214.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251227_103752129_BURST001.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251227_103752129_BURST001.jpg">IMG_20251227_103752129_BURST001.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
+<img style="height: 100%;" src="thumb-IMG_20251227_104426987_BURST001.jpg"></a>
+</div>
+<div style="width: 100%; height: 10%;">
+<a href="IMG_20251227_104426987_BURST001.jpg">IMG_20251227_104426987_BURST001.jpg</a>
+</div>
+</div>
+<div style="width: 33vw; height: 33vh; ">
+<div style="width: 100%; height: 90%;">
 <img style="height: 100%;" src="thumb-manzana.jpg"></a>
 </div>
 <div style="width: 100%; height: 10%;">
